# filters

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  base_filter.cc  build.sh  flag_manager.cc  flag_manager.hh  gaussianblur_filter.cc  gaussianblur_filter.hh  green_filter.cc  green_filter.hh  main.cc  meanshift_filter.cc  meanshift_filter.hh  negative_filter.hh  setup.sh  travis_setup.sh
src/: affine_filter.cc  affine_filter.hh  base_filter.hh  blue_filter.cc  blue_filter.hh  dot_filter.cc  dot_filter.hh  emboss_filter.cc  emboss_filter.hh  flag_manager.cc  flag_manager.hh  grayscale_filter.cc  grayscale_filter.hh  main.cc  negative_filter.cc  red_filter.cc  red_filter.hh  sharp_filter.cc  sharp_filter.hh  simple_filter.cc  simple_filter.hh
